--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                   </section>
                 </section>
                 <section class="magazine">
-                <section class="row bottom">
+                  <section class="row bottom">
                     <article class="col-md-3 magazine-article">
                         <section class="image-article" id="image-article4"><img src="images/image1.jpg"/></section>
                         <section class="category">
@@ -375,7 +375,89 @@
                         <section class="image-article" id="image-article7"><span class="mag-cat" id="marathon">IN FOCUS</span><img src="images/image1.jpg"/></section>
                         <h5 class="article-title">THE QUEEN’S SPEECH</h5>
                     </article>
+                  </section>
                 </section>
+                <section class="editors-pick">
+                  <section class="row justify-content-center title-border container-fluid">
+                    <span class="col-12 icon-n"></span>
+                    <span class="part-title">EDITOR'S PICK</span>
+                  </section>
+                  <section class="featured">
+                    <section class="row">
+                        <article class="col-md-6 col-lg-3 editors">
+                            <section class="wrap">
+                                <a><img src="images/trump.jpg" alt="responsive"><span class="pic-on">U.S.</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>'Quiet Christian' Trump Planned to Build Megachurch, Longtime Pastor Says</h3>
+                                <section class="summary">Trump's longtime personal pastor said he once tried to build a glass cathedral megachurch and described him as a "quiet Christian" who doesn't need to quote the Bible.</section>
+                            </section>
+                        </article>
+                        <article class="col-md-6 col-lg-3 editors">
+                            <section class="wrap">
+                                <a><img src="images/politic1.jpg" alt="responsive"><span class="pic-on">U.S.</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>Man Who Made Sharia Anti-adultery Laws Caned in Public for Having Affair</h3>
+                                <section class="summary">Mukhlis bin Muhammad was from the Aceh Ulema Council and was reportedly caught in a parked car with a married woman.</section>
+                            </section>
+                        </article>
+                        <article class="col-md-6 col-lg-3 editors">
+                            <section class="wrap">
+                                <a><img src="images/politic2.jpg" alt="responsive"><span class="pic-on">TECH & SCIENCE</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>Eighth NRA Board Member Quits Since May Amid Involvement in Lawsuits</h3>
+                                <section class="summary">Dan Boren had been ensnared in some of the NRA's legal disputes during a period of unprecedented internal turmoil at the organization.</section>
+                            </section>
+                        </article>
+                        <article class="col-md-6 col-lg-3 editors">
+                            <section class="wrap">
+                                <a><img src="images/politic1.jpg" alt="responsive"><span class="pic-on">WORLD</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>Earthquakes in Southern California Put Stress on a Major Fault Line</h3>
+                                <section class="summary">"The Garlock Fault has been quiet for a long time. But there's geologic evidence that there have been large earthquakes on it," the lead author of a new study said.</section>
+                            </section>
+                        </article>
+                        <article class="col-md-6 col-lg-3 editors">
+                            <section class="wrap">
+                                <a><img src="images/politic2.jpg" alt="responsive"><span class="pic-on">TECH & SCIENCE</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>England Suspends Fracking After New Study Threatens Powerful Earthquakes</h3>
+                                <section class="summary">A report from England's Oil and Gas Authority has caused the government to call for a halt to fracking in the country on the basis of new earthquake fears.</section>
+                            </section>
+                        </article>
+                        <article class="col-md-6 col-lg-3 editors">
+                            <section class="wrap">
+                                <a><img src="images/politic1.jpg" alt="responsive"><span class="pic-on">U.S.</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>Here's Who Is Still In The Democratic Race After Beto O'Rourke Ends Campaign</h3>
+                                <section class="summary">The 2020 Democratic field of presidential hopefuls once stood at more than 20, but it has been cut in half after O'Rourke dropped out. Democratic primaries and caucuses begin in just three months.</section>
+                            </section>
+                        </article>
+                        <article class="col-md-6 col-lg-3 editors">
+                            <section class="wrap">
+                                <a><img src="images/politic2.jpg" alt="responsive"><span class="pic-on">TECH & SCIENCE</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>These Are All the Animals That Have Been Launched Into Space</h3>
+                                <section class="summary">The Soviet Union launched a dog known as Laika into orbit on November 3, 1957.</section>
+                            </section>
+                        </article>
+                        <article class="col-md-6 col-lg-3 editors">
+                            <section class="wrap">
+                                <a><img src="images/politic1.jpg" alt="responsive"><span class="pic-on">WORLD</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>Eighth NRA Board Member Quits Since May Amid Involvement in Lawsuits</h3>
+                                <section class="summary">Dan Boren had been ensnared in some of the NRA's legal disputes during a period of unprecedented internal turmoil at the organization.</section>
+                            </section>
+                        </article>
+                    </section>
+                  </section>
                 </section>
   	</body>
   	</html>
