featured slideshows,side top-picks

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   	<section class="fixed-top" id="stickynav">
       <section class="d-flex justify-content-between" id="navscroll">
         <section class="p-2">
-          <date id="datenav">Thu, Apr 25, 2019</date>
+          <date id="datenav">Thu, Oct 25, 2019</date>
   	    </section>
         <section class="p-2" id="signin">
           <span>SIGN IN</span><a href="#">SUBSCRIBE <i class="fas fa-chevron-right" id="shevron"></i></a>
@@ -44,7 +44,7 @@
   	                        <section class="block-title">FEATURED STORIES</section>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/negombo-sri-lanka.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">WORLD</span></a>
+  	                                <a><img src="images/negombo-sri-lanka.jpg" alt="responsive"><span class="pic-on">WORLD</span></a>
   	                            </section>
   	                            <section class="article-info">
   	                                <h3>Sri Lanka Muslims Attacked, Forced From Homes</h3>
@@ -56,7 +56,7 @@
   	                        </article>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/gettyimages-1136201085.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">U.S.</span></a>
+  	                                <a><img src="images/gettyimages-1136201085.jpg" alt="responsive"><span class="pic-on">U.S.</span></a>
   	                            </section>
   	                            <section class="article-info">
   	                                <h3>Lindsey Graham in 1998: Ignoring Subpoenas Impeachable</h3>
@@ -68,7 +68,7 @@
   	                        </article>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/mick-mulvaney.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">U.S.</span></a>
+  	                                <a><img src="images/mick-mulvaney.jpg" alt="responsive"><span class="pic-on">U.S.</span></a>
   	                            </section>
   	                            <section class="article-info">
   	                                <h3>Former Deficit Hawk Mick Mulvaney Defends Growing Debt</h3>
@@ -80,7 +80,7 @@
   	                        </article>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/joe-biden-outraises-democratic-opponents.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">U.S.</span></a>
+  	                                <a><img src="images/joe-biden-outraises-democratic-opponents.jpg" alt="responsive"><span class="pic-on">U.S.</span></a>
   	                            </section>
   	                            <section class="article-info">
   	                                <h3>Biden Raises $6.3 Million but Sanders Has More Donors</h3>
@@ -92,7 +92,7 @@
   	                        </article>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/gettyimages-1133267016_0.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">WORLD</span></a>
+  	                                <a><img src="images/gettyimages-1133267016_0.jpg" alt="responsive"><span class="pic-on">WORLD</span></a>
   	                            </section>
   	                            <section class="article-info">
   	                                <h3>U.S. to Leave Arms Treaty It Wasn’t Following Anyway</h3>
@@ -104,7 +104,7 @@
   	                        </article>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/image_01_fullscreen.8a9dcafb.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">SPONSORED INSIGHT</span></a>
+  	                                <a><img src="images/image_01_fullscreen.8a9dcafb.jpg" alt="responsive"><span class="pic-on">SPONSORED INSIGHT</span></a>
   	                            </section>
   	                            <section class="article-info" id="sponsored">
   	                                <h3>ZENITH'S DEFY INVENTOR IS REVOLUTIONIZING MECHANICAL WATCHMAKING</h3>
@@ -113,7 +113,7 @@
   	                        </article>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/tjhprofilenewsweek.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">SPONSORED INSIGHT</span></a>
+  	                                <a><img src="images/tjhprofilenewsweek.jpg" alt="responsive"><span class="pic-on">SPONSORED INSIGHT</span></a>
   	                            </section>
   	                            <section class="article-info" id="sponsored">
   	                                <h3>Law Firms: Fighting for a Noble Cause</h3>
@@ -127,7 +127,7 @@
                             <section class="block-title">TOP STORY</section>
                             <article>
                                 <section class="wrap">
-                                    <a><img src="images/trump.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">WORLD</span></a>
+                                    <a><img src="images/trump.jpg" alt="responsive"><span class="pic-on">WORLD</span></a>
                                 </section>
                                 <h3>Trump Holds Firm on Impeachment, Says Cooperating 'Sets Terrible Precedent'</h3>
                                 <section class="summary">The president said the White House will still not honor document requests or subpoenas despite Congress passing a resolution formalizing the impeachment inquiry. </section>
@@ -182,7 +182,7 @@
                             <section class="block-title">OPINION</section>
                             <section class="wrap opinion">
                                 <section class="row">
-                                    <section class=" col-3"><img src="images/headpro.png" class="headshot" alt="Responsive image"></section>
+                                    <section class=" col-3"><img src="images/headpro.png" class="headshot" alt="responsive"></section>
                                     <section class="col-9">
                                         <p class="info">Ayanna Pressley Is Right: 16-Year-Olds Deserve the Right to Vote</p>
                                         <p class="byline">BY NANCY DEUTSCH</p>
@@ -191,7 +191,7 @@
                             </section>
                             <section class="wrap opinion">
                                 <section class="row">
-                                    <section class="col-3"><img src="images/headpro.png" class="headshot" alt="Responsive image"></section>
+                                    <section class="col-3"><img src="images/headpro.png" class="headshot" alt="responsive"></section>
                                     <section class="col-9">
                                         <p class="info">To Stem the Crisis in Lebanon, More Heads Need to Roll</p>
                                         <p class="byline">BY MARTIN JAY</p>
@@ -200,7 +200,7 @@
                             </section>
                             <section class="wrap opinion">
                                 <section class="row">
-                                    <section class="col-3"><img src="images/headpro.png" class="headshot" alt="Responsive image"></section>
+                                    <section class="col-3"><img src="images/headpro.png" class="headshot" alt="responsive"></section>
                                     <section class="col-9">
                                         <p class="info">Impeachment? No. Call It a Partisan Effort to Remove the President</p>
                                         <p class="byline">BY PETER ROFF</p>
@@ -209,7 +209,7 @@
                             </section>
                             <section class="wrap opinion">
                                 <section class="row">
-                                    <section class="col-3"><img src="images/headpro.png" class="headshot" alt="Responsive image"></section>
+                                    <section class="col-3"><img src="images/headpro.png" class="headshot" alt="responsive"></section>
                                     <section class="col-9">
                                         <p class="info">Billionaires Won't Save Californians From PG&E Disasters</p>
                                         <p class="byline">BY SYLVIA CHI AND JESSICA GUADALUPE TOVAR</p>
@@ -218,7 +218,7 @@
                             </section>
                             <section class="wrap opinion">
                                 <section class="row">
-                                    <section class="col-3"><img src="images/headpro.png" class="headshot" alt="Responsive image"></section>
+                                    <section class="col-3"><img src="images/headpro.png" class="headshot" alt="responsive"></section>
                                     <section class="col-9">
                                         <p class="info">Baghdadi's Death Does Not Matter</p>
                                         <p class="byline">BY MAX ABRAHMS</p>
@@ -227,7 +227,7 @@
                             </section>
                             <section class="wrap opinion" id="last-opinion">
                                 <section class="row">
-                                  <section class="col-3"><img src="images/headpro.png" class="headshot" alt="Responsive image"></section>
+                                  <section class="col-3"><img src="images/headpro.png" class="headshot" alt="responsive"></section>
                                     <section class="col-9">
                                       <p class="info">Stop Calling It the Republican Party</p>
                                       <p class="byline">BY SETH ABRAMSON</p>
@@ -307,7 +307,7 @@
                     <section class="row">
                       <section class="col-md-3 align-self-center">
                           <section class="wrap">
-                              <a><img src="images/17190426-0503cover1800x2400.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">MAY 03 ISSUE</span></a>
+                              <a><img src="images/17190426-0503cover1800x2400.jpg" class="img-fluid" alt="responsive"><span class="pic-on">MAY 03 ISSUE</span></a>
                           </section>
                           <p class="gray">See All Features</p>
                       </section>
@@ -458,6 +458,111 @@
                         </article>
                     </section>
                   </section>
+                </section>
+                <section class="editors-pick">
+                  <section class="row justify-content-center title-border container-fluid">
+                    <span class="col-12 icon-n" id="shadowN"></span>
+                    <span class="part-title">FEATURED SLIDESHOWS</span>
+                  </section>
+                <section class="featured">
+                    <section class="row">
+                        <article class="col-md-4">
+                            <section class="wrap">
+                                <a><img src="images/featured.png" alt="responsive"><span class="count">24</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>Meet the Master Carver Who Turns Pumpkins Into Portraits</h3>
+                            </section>
+                        </article>
+                        <article class="col-md-4">
+                            <section class="wrap">
+                                <a><img src="images/featured.png" alt="responsive"><span class="count">7</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>Our Cosplay Favorites from NYCC 2019</h3>
+                            </section>
+                        </article>
+                        <article class="col-md-4">
+                            <section class="wrap">
+                                <a><img src="images/featured.png" alt="responsive"><span class="count">22</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>The Great Alone: Walking the Pacific Crest Trail</h3>
+                            </section>
+                        </article>
+                        <article class="col-md-4">
+                            <section class="wrap">
+                                <a><img src="images/featured.png" alt="responsive"><span class="count">11</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>Cruise the Galapagos While Conserving Wildlife Found Nowhere Else</h3>
+                            </section>
+                        </article>
+                        <article class="col-md-4">
+                            <section class="wrap">
+                                <a><img src="images/featured.png" alt="responsive"><span class="count">10</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>The New Documentary Trying to Save the Most Trafficked Mammals in the World</h3>
+                            </section>
+                        </article>
+                        <article class="col-md-4">
+                            <section class="wrap">
+                                <a><img src="images/featured.png" alt="responsive"><span class="count">29</span></a>
+                            </section>
+                            <section class="article-info">
+                                <h3>American Masterpieces: Singular Expressions of National Genius</h3>
+                            </section>
+                        </article>
+                    </section>
+                </section>
+                </section>
+                <section class="picks">
+                <section class="block-title part-picks">U.S.</section>
+                <section class="row">
+                    <article class="col-md-4">
+                        <section class="wrap">
+                            <a href="#"><img src="images/featured.png" alt="responsive"></a>
+                        </section>
+                        <section class="article-info">
+                            <h3>New York City Marathon Tracker: How to Follow Runners</h3>
+                        </section>
+                    </article>
+                    <article class="col-md-4">
+                        <section class="wrap">
+                            <a href="#"><img src="images/featured.png" alt="responsive"></a>
+                        </section>
+                        <section class="article-info">
+                            <h3>National Sandwich Day 2019: Free or Cheap Sandwiches</h3>
+                        </section>
+                    </article>
+                    <section class="col-md-4">
+                        <section class="feature2 top-column">
+                            <section class="row">
+                                <section class="col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">Did Time Change? Correct Time for Atlanta, Houston, New York, Los Angeles</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class="col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">Judge Blocks Trump's Insurance Requirements For Immigrants Seeking Visas</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class="col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">New York Senator Chuck Schumer Mocks Trump Making Florida His New Home</p>
+                                </section>
+                            </section>
+                        </section>
+                    </section>
+                </section>
                 </section>
   	</body>
   	</html>
