bottom featured posts

--- a/index.html
+++ b/index.html
@@ -564,5 +564,146 @@
                     </section>
                 </section>
                 </section>
+                <section class="picks">
+                <section class="block-title part-picks">World</section>
+                <section class="row">
+                    <article class="col-md-4">
+                        <section class="wrap">
+                            <a href="#"><img src="images/featured2.png" alt="responsive"></a>
+                        </section>
+                        <section class="article-info">
+                            <h3>Trump Faces New Mideast Crisis as 'Iraq Spring' Unrest Threatens US Hold</h3>
+                        </section>
+                    </article>
+                    <article class="col-md-4">
+                        <section class="wrap">
+                            <a href="#"><img src="images/featured2.png" alt="responsive"></a>
+                        </section>
+                        <section class="article-info">
+                            <h3>Ukrainian Lawmaker Caught Contacting Prostitute on Phone in Parliament</h3>
+                        </section>
+                    </article>
+                    <section class="col-md-4">
+                        <section class="feature2 top-column">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured2.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">Baby Boy Dies after Falling Out of Apartment Window</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured2.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">U.S. Deficit Skyrockets 26 Percent Over 2018, Trump Tax Cuts Blamed for Gap</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured2.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">Female CEOs Face 'Greater Penalties' Than Men for Ethical Trangressions</p>
+                                </section>
+                            </section>
+                        </section>
+                    </section>
+                </section>
+                </section>
+                <section class="picks">
+                <section class="block-title part-picks">Business</section>
+                <section class="row">
+                    <article class="col-md-4">
+                        <section class="wrap">
+                            <a href="#"><img src="images/featured.png" alt="responsive"></a>
+                        </section>
+                        <section class="article-info">
+                            <h3>Wealth Tax Would Have Boosted Anti-Semitism: Harvard President Emeritus</h3>
+                        </section>
+                    </article>
+                    <article class="col-md-4">
+                        <section class="wrap">
+                            <a href="#"><img src="images/featured.png" alt="responsive"></a>
+                        </section>
+                        <section class="article-info">
+                            <h3>Now that labels can pay to promote music on Spotify, smaller artists may</h3>
+                        </section>
+                    </article>
+                    <section class="col-md-4">
+                        <section class="feature2 top-column">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">Believing in Witchcraft May Have Helped People Avoid Disease, Study Says</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">Freeze Warnings Issued Across Vast Swathes of U.S. over Halloween</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">The Origin Stories of Your Favorite Halloween Monsters</p>
+                                </section>
+                            </section>
+                        </section>
+                    </section>
+                </section>
+                </section>
+                <section class="picks">
+                <section class="block-title part-picks">Tech & Science</section>
+                <section class="row">
+                    <article class="col-md-4">
+                        <section class="wrap">
+                            <a href="#"><img src="images/featured.png" alt="responsive"></a>
+                        </section>
+                        <section class="article-info">
+                            <h3>The 'Last Necklace Made by the Neanderthals' Discovered in Spanish Cave</h3>
+                        </section>
+                    </article>
+                    <article class="col-md-4">
+                        <section class="wrap">
+                            <a href="#"><img src="images/featured.png" alt="responsive"></a>
+                        </section>
+                        <section class="article-info">
+                            <h3>Numerous Dinosaur Footprints Discovered in Remote Alaskan Peninsula</h3>
+                        </section>
+                    </article>
+                    <section class="col-md-4">
+                        <section class="feature2 top-column">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">Freeze Warnings Issued Across Vast Swathes of U.S. over Halloween</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">'The Walking Dead' Season 10 Episode 5 Spoilers</p>
+                                </section>
+                            </section>
+                        </section>
+                        <section class="feature2">
+                            <section class="row">
+                                <section class=" col-5"><img src="images/featured.png" alt="responsive"></section>
+                                <section class="col-7">
+                                    <p class="info">'Terminator Dark Fate': Callbacks and Easter Eggs Explained</p>
+                                </section>
+                            </section>
+                        </section>
+                    </section>
+                </section>
+                </section>
   	</body>
   	</html>
