fixed main logo properties, add links to featured posts

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   	            <li><a>Sports</a></li>
   	            <li><a>Health</a></li>
   	            <li><a>Opinion</a></li>
-  	            <li><a>Ndelible</a></li>
+  	            <li><a>Vantage</a></li>
   	            <li><a id="search">Search</a><i class="fas fa-search"></i></li>
   	        </ul>
   	 </nav>
@@ -44,7 +44,7 @@
   	                        <section class="block-title">FEATURED STORIES</section>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/negombo-sri-lanka.jpg" alt="responsive"><span class="pic-on">WORLD</span></a>
+  	                                <a><img src="images/image1.jpg" alt="responsive"><span class="pic-on">WORLD</span></a>
   	                            </section>
   	                            <section class="article-info">
   	                                <h3>Sri Lanka Muslims Attacked, Forced From Homes</h3>
@@ -56,7 +56,7 @@
   	                        </article>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/gettyimages-1136201085.jpg" alt="responsive"><span class="pic-on">U.S.</span></a>
+  	                                <a><img src="images/image1.jpg" alt="responsive"><span class="pic-on">U.S.</span></a>
   	                            </section>
   	                            <section class="article-info">
   	                                <h3>Lindsey Graham in 1998: Ignoring Subpoenas Impeachable</h3>
@@ -68,7 +68,7 @@
   	                        </article>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/mick-mulvaney.jpg" alt="responsive"><span class="pic-on">U.S.</span></a>
+  	                                <a><img src="images/image1.jpg" alt="responsive"><span class="pic-on">U.S.</span></a>
   	                            </section>
   	                            <section class="article-info">
   	                                <h3>Former Deficit Hawk Mick Mulvaney Defends Growing Debt</h3>
@@ -80,7 +80,7 @@
   	                        </article>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/joe-biden-outraises-democratic-opponents.jpg" alt="responsive"><span class="pic-on">U.S.</span></a>
+  	                                <a><img src="images/image1.jpg" alt="responsive"><span class="pic-on">U.S.</span></a>
   	                            </section>
   	                            <section class="article-info">
   	                                <h3>Biden Raises $6.3 Million but Sanders Has More Donors</h3>
@@ -92,7 +92,7 @@
   	                        </article>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/gettyimages-1133267016_0.jpg" alt="responsive"><span class="pic-on">WORLD</span></a>
+  	                                <a><img src="images/image1.jpg" alt="responsive"><span class="pic-on">WORLD</span></a>
   	                            </section>
   	                            <section class="article-info">
   	                                <h3>U.S. to Leave Arms Treaty It Wasn’t Following Anyway</h3>
@@ -104,7 +104,7 @@
   	                        </article>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/image_01_fullscreen.8a9dcafb.jpg" alt="responsive"><span class="pic-on">SPONSORED INSIGHT</span></a>
+  	                                <a><img src="images/image1.jpg" alt="responsive"><span class="pic-on">SPONSORED INSIGHT</span></a>
   	                            </section>
   	                            <section class="article-info" id="sponsored">
   	                                <h3>ZENITH'S DEFY INVENTOR IS REVOLUTIONIZING MECHANICAL WATCHMAKING</h3>
@@ -113,7 +113,7 @@
   	                        </article>
   	                        <article>
   	                            <section class="wrap">
-  	                                <a><img src="images/tjhprofilenewsweek.jpg" alt="responsive"><span class="pic-on">SPONSORED INSIGHT</span></a>
+  	                                <a><img src="images/image1.jpg" alt="responsive"><span class="pic-on">SPONSORED INSIGHT</span></a>
   	                            </section>
   	                            <section class="article-info" id="sponsored">
   	                                <h3>Law Firms: Fighting for a Noble Cause</h3>
